--- a/src/styles/public.less
+++ b/src/styles/public.less
@@ -1,3 +1,13 @@
 /**
 * less 公共变量区域
 */
+
+@font-color: #fff;
+@font-icolor: #4fd2ff;
+@i-background: #020610;
+@head-height: 76px; //头部高度
+@margin: 10px; //边距 
+@t-lineheight:40px;
+@min-width:1360px;
+
+@font-size:16px;
