--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -10,6 +10,7 @@
 
 .s-box {
     border: 1px solid @font-icolor;
+    position: relative;
 }
 
 .s-box-full {
@@ -74,9 +75,18 @@
     bottom: 0;
     left: 0;
 }
+
 .box-full {
     position: absolute !important;
     top: 30px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.main-full {
+    position: absolute !important;
+    top: 45px;
     right: 0;
     bottom: 0;
     left: 0;
