--- a/src/styles/public.less
+++ b/src/styles/public.less
@@ -8,6 +8,10 @@
 @head-height: 76px; //头部高度
 @margin: 10px; //边距 
 @t-lineheight:40px;
-@min-width:1360px;
-
+@min-width:1360px; 
 @font-size:16px;
+
+@d-color:#fff;
+@i-color:#8ce2ff;
+@f-color:#a8e3ff;
+ 
